<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sécurisation site gvi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_slide">Slide</string>
    <string name="image_content_description">Un Android </string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="labelConnexion">Veuiller vous connecter.</string>
    <string name="login">Login : </string>
    <string name="mdp">Mot de passe : </string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_help">Aide</string>
    <string name="menu_about">A propos</string>
    <string name="next">Suivant</string>
    <string name="listeUtilisateurs">Liste des utilisateurs</string>
    <string name="ajouterUtilisateur">Ajouter un utilisateur</string>
    <string name="ajouterTechnicien">Ajouter un technicien</string>
    <string name="voirHistorique">Voir historique</string>
    <string name="gererLesBadges">Gérer les badges</string>
    <string name="gererLesUtilisateurs">Gérer les utilisateurs</string>
    <string name="gererLesSecteur">Gérer les secteur</string>
    <string name="gererLesAppareils">Gérer les appareils</string>
    <string name="gererLesNumerosPredéfinis">Gérer les numéros prédéfinis</string>
    <string name="gererLesAuthorisationDacces">Gérer les authorisation d\'acces</string>
    <string name="title_activity_menu_utilisateur">Menu gérer utilisateurs</string>
    <string name="precedent">Précedent</string>
    <string name="suivant">Suivant</string>
    <string name="title_activity_liste_utilisateur">Liste des utilisateurs</string>
    <string name="title_activity_parametres">Parametres</string>
    <string name="protocol">"Protocol : "</string>
    <string name="serveurURL">Serveur URL :</string>
    <string name="port">Port :</string>
    <string name="applicationName">Nom de l\'application :</string>
    <string name="ressourcesPth">Chemin des ressources :</string>
    <string name="valier">Valider</string>
    <string name="valider">Valider</string>
    <string name="title_activity_modifier_utilisateur">ModifierUtilisateur</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="ddNaissance">Date de naissance :</string>
    <string name="mail">Email :</string>
    <string name="sexe">Sexe :</string>
    <string name="fixe">Téléphone fixe :</string>
    <string name="portable">Téléphone portable :</string>
    <string name="adresse">Adresse :</string>
    <string name="codepostale">Code postale :</string>
    <string name="ville">Ville :</string>
    <string name="deleteUtilisateur">Supprimer l\'utilisateur</string>
    <string name="updateUtilisateur">Modifier l\'utilisateur</string>
    <string name="creeUtilisateur">Crée utilisateur</string>
    <string name="title_activity_ajouter_utilisateur">Ajouter un utilisateur</string>
    <string name="title_activity_ajouter_technicien">Ajouter un technicien</string>
    <string name="title_activity_historique_acces">Détail de l\'acces</string>
    <string name="title_activity_historique">Historique</string>
    <string name="title_activity_historique_intrusion">Détail de l\'intrusion</string>
    <string name="title_activity_historique_photo">Détail de l\'evenement photo</string>
    <string name="title_activity_menu_badge">Gérer les badges</string>
    <string name="title_activity_liste_badges">Liste des badges</string>
    <string name="creeTechnicien">Crée technicien</string>
    <string name="creeBadge">Crée badge</string>
    <string name="date">Date :</string>
    <string name="utilisateur">Utilisateur :</string>
    <string name="passage">Passage :</string>
    <string name="photo">Photo :</string>
    <string name="borneAcces">Borne d\'acces :</string>
    <string name="retour">Retour</string>
    <string name="camera">Camera :</string>
    <string name="detecteurIntr">Détecteur intrusion :</string>
    <string name="listebadges">Liste des badges</string>
    <string name="numero">Numero de badge :</string>
    <string name="ajouterBadge">Ajouter un badge</string>
    <string name="attributionbadges">Attribution badge</string>
    <string name="title_activity_ajouter_badge">Ajouter un badge</string>
    <string name="title_activity_attributionBadge">Attribuer un badge</string>
    <string name="title_activity_gerer_secteur">Gérer les secteurs</string>
    <string name="title_activity_ajouter_secteur">Ajouter un secteur</string>
    <string name="title_activity_liste_secteur">Liste des secteurs</string>
    <string name="title_activity_attribution_secteur">Attribution des secteurs</string>
    <string name="title_activity_ajouter_position">Ajouter une position</string>
    <string name="badge">Badge :</string>
    <string name="title_activity_menu_appareil">Menu des appareils</string>
    <string name="attributionBa">Attribuer le badge</string>
    <string name="ajouterSecteur">Ajouter un secteur</string>
    <string name="listeDesSecteurs">Liste des secteurs</string>
    <string name="attributionSecteur">Attribution des secteurs</string>
    <string name="cree_secteur">Crée le secteur</string>
    <string name="selectsecteur">Séléctionner un secteur</string>
    <string name="select_borne">Ajouter une borne d\'acces</string>
    <string name="select_camera">Ajouter une caméra</string>
    <string name="select_detecteur">Ajouter un détecteur intrusion</string>
    <string name="title_activity_menu_position">Menu position</string>
    <string name="gererBorneAcces">Gérer les bornes d\'acces</string>
    <string name="gererCamera">Gérer les caméras</string>
    <string name="gererDetecteursIntrusion">Gérer les détecteurs intrusion</string>
    <string name="gererPosition">Gérer les positions</string>
    <string name="listeposition">Liste des positions diponible</string>
    <string name="ajouterpos">Ajouter une position</string>
    <string name="cree">Crée</string>
    <string name="longitude">Longitude :</string>
    <string name="latitude">Latitude :</string>
    <string name="pos">Position :</string>
    <string name="title_activity_liste_positions">Liste des positions</string>
    <string name="title_activity_menu_detecteur">Gérer les détecteurs</string>
    <string name="title_activity_liste_detecteur">Liste des détecteurs</string>
    <string name="title_activity_ajouter_detecteur">Ajouter un détecteur</string>
    <string name="title_activity_menu_camera">Gérer les caméras</string>
     <string name="title_activity_liste_camera">Liste des caméras</string>
     <string name="title_activity_ajout_camera">Ajout d\'une caméra</string>
     <string name="ip">Ip :</string>
     <string name="type">Type :</string>
     <string name="title_activity_liste_borne_acess">Liste des borne d\'acces</string>
     <string name="title_activity_ajout_borne_acess">Ajouter une borne d\'acces</string> 
     <string name="title_activity_menu_borne_acess">Gérer les borne d\'acces</string>
     <string name="title_activity_menu_numero">Gérer les numéros prédéfini</string>
     <string name="title_activity_ajouter_numero">Ajouter un numéro prédéfini</string>
     <string name="title_activity_liste_numero">Liste des numéros prédéfinis</string>
     <string name="heuredebut">Heure de début :</string>
     <string name="heurefin">Heure de fin :</string>
     <string name="secteur">Secteur :</string>
     <string name="title_activity_authorisation_acces">Gérer les authorisations d\'acces</string>
         <string name="drawer_open">Menu ouvert</string>
    <string name="drawer_close">Menu fermé</string>
</resources>
