<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccueilActivity"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/voirHistorique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voirHistorique" 
  
            />

    <Button
        android:id="@+id/gererLesBadges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gererLesBadges" />

    <Button
        android:id="@+id/gererLesUtilisateurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gererLesUtilisateurs" />
        
    <Button
        android:id="@+id/gererLesSecteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gererLesSecteur" />

    <Button
        android:id="@+id/gererLesAppareils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gererLesAppareils" />

    <Button
        android:id="@+id/gererLesNumerosPredéfinis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gererLesNumerosPredéfinis" />

    <Button
        android:id="@+id/gererLesAuthorisationDacces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gererLesAuthorisationDacces" />
        
</LinearLayout>
