<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".AttributionBadge" xmlns:app="http://schemas.android.com/apk/res/com.example.test">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/textViewAttributionBadgeFiltrerBadge"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Filtrer la liste de badges :" />

            <EditText
                android:id="@+id/textViewAttributionBadgeFiltrerBadge"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
            <Button
                 android:id="@+id/buttonAttributionBadgeFiltrerBadge"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ok"
                android:ems="10"  
            />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAttributionBadgeBadge"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/badge" />

            <Button
                android:id="@+id/spinnerAttributionBadgeBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAttributionBadgeUtilisateur"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/utilisateur" />

            <Button
                android:id="@+id/spinnerAttributionBadgeUtilisateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp" >
            <Button
                android:id="@+id/buttonAttributionBadgeValider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attributionBa" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>